<resources>
    <string name="appName">CoCoin</string>
    <string name="income">收入</string>
    <string name="cost">支出</string>
    <string name="year">%1$s年</string>
    <string name="month">%1$s月</string>
    <string name="dateDialogTitle">请选择想要查看的年月</string>
    <string name="record">记账</string>
    <string name="stat">统计</string>
    <string name="add">添加</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
