<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0." />


    <RelativeLayout
        android:id="@+id/layoutLeft"
        android:layout_width="70dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:onClick="onClick"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvMonth"
            android:layout_below="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutMid"
        android:layout_width="70dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layoutLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.1">
        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/income"/>
        <TextView
            android:id="@+id/tvIncomeAmount"
            android:layout_below="@+id/tvIncome"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutRight"
        android:layout_width="70dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutMid"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5">
        <TextView
            android:id="@+id/tvCost"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/cost"/>
        <TextView
            android:id="@+id/tvCostAmount"
            android:layout_below="@+id/tvCost"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/lv_records_container"
        android:layout_width="409dp"
        android:layout_height="550dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/lv_records"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/navi_bar_container"
        android:layout_width="409dp"
        android:layout_height="79dp"
        android:background="#FFCC00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_records_container"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:layout_marginStart="30dp"
            />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginStart="30dp"/>

        <Button
            android:id="@+id/btn_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>